--- a/composer.json
+++ b/composer.json
@@ -56,7 +56,7 @@
         "optimize-autoloader": true,
         "preferred-install": "dist",
         "sort-packages": true,
-        "platform-check": false
+        "platform-check": true
     },
     "minimum-stability": "dev",
     "prefer-stable": true
